# crawler

./: .clinerules  .env.example  .env.prod.example  .gitignore  CLAUDE.md  Makefile  README.md  config.yaml  run.py  scrapy.cfg
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: config.py  deps.py  main.py
backend/app/api/: auth.py  jobs.py  results.py  runs.py  users.py
backend/app/core/: db.py  logging.py  redis.py  security.py
backend/app/crawler/: antibot.py  browser_pool.py  dedup.py  engine.py  extractor.py  fetcher.py  middleware.py  parser.py  robots.py  user_agents.py
backend/app/migrations/: env.py  script.py.mako
backend/app/migrations/versions/: 0001_initial_schema.py
backend/app/models/: __init__.py
backend/app/schemas/: auth.py  common.py  jobs.py  results.py  runs.py
backend/app/services/: __init__.py  auth_service.py  job_service.py  result_service.py  run_service.py
backend/app/worker/: celery_app.py  tasks.py
backend/tests/: conftest.py  test_antibot.py  test_api.py  test_engine.py  test_parser.py  test_user_agents.py
crawler/: .gitignore  README.md  config.yaml  items.py  middlewares.py  output.json  pipelines.py  requirements.txt  settings.py
crawler/backend/: app.py
crawler/core/: antibot.py  fetcher.py  storage.py
crawler/frontend/: index.html
crawler/spiders/: spiders.py
crawler/utils/: user_agents.py
frontend/: .dockerignore  .gitignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: client.ts
frontend/src/assets/: main.css
frontend/src/components/job/: JobForm.vue
frontend/src/components/layout/: AppShell.vue
frontend/src/components/run/: LiveLogViewer.vue  RunCard.vue
frontend/src/components/ui/: Badge.vue  Button.vue  Card.vue  Dialog.vue  Input.vue  Select.vue  StatusBadge.vue  Switch.vue  Textarea.vue
frontend/src/composables/: useSSE.ts
frontend/src/i18n/: index.ts
frontend/src/i18n/locales/: en.json  vi.json
frontend/src/lib/: utils.ts
frontend/src/pages/: Dashboard.vue  JobDetail.vue  Jobs.vue  Login.vue  Proxies.vue  Results.vue  Settings.vue  Signup.vue  Users.vue  Webhooks.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  theme.ts
frontend/src/types/: index.ts
infra/: docker-compose.dev.yml  docker-compose.prod.yml
infra/postgres-init/: 01_extensions.sql
scripts/: deploy.sh  gen_jwt_keys.py  smoke-job.yaml
